--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "@magstardev/project-template-generator",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "A project template generator",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "bin": "dist/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yaseenrehan123/React-Tailwind-Template.git"
   },
+  "bin": "dist/index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
